--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                           </div>
                       </div>
                       <div class="foto">
-                            <img src="./assets/img/photo desktop.png" alt="">
+                            <img src="./assets/img/jorgeChirinos.png" alt="">
                             <div class="shape__vector"></div>                      
 
                        </div>
